--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,7 +34,7 @@ set-option -g status-position bottom
 set-option -g status-style bg=colour237,fg=colour223 # bg=bg1, fg=fg1
 
 # use mouse
-set -g mouse off
+# set -g mouse off
 
 # refresh
 bind r source-file ~/.config/tmux/tmux.conf
