--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,22 +27,63 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # use mouse
 set -g mouse on
 
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set -sg escape-time 50
+set -g detach-on-destroy off
+set -g renumber-windows on
+
+# Set true colors
+set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -g focus-events on
+
 # refresh
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source ~/.config/tmux/tmux.conf
+
+#sessions
+bind-key h choose-session
+
 # pane splitting
 bind o split-window -h
 bind p split-window -v
+
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
+
 # close pane
 bind q kill-pane
 
-# styling 
+# Status Bar Position and Update Interval
 set -g status-position bottom            
-set -g status-interval 1
-set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})'
-set -g window-status-current-format '[#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})]'
+set -g status-interval 2
+
+# Window Status Format (Normal and Current)
+set -g window-status-format '#I: #(basename "#{pane_current_path}")'
+set -g window-status-format '#I: #{pane_current_command}'
+
+# Status Bar Styling (Transparent Background)
+set -g status-style bg=default,fg=white  
+set -g window-status-style bg=default,fg=white  
+set -g window-status-current-style bg=default,fg=green  
+
+# Status Right - Time, User, Hostname with Icons
 set -g status-right-length 120
-set -g status-right '#(date +"%b %_d %H:%M") | #(whoami)@#(hostname -s) '
+set -g status-right '#[fg=cyan] #(date +"%b %_d %H:%M") #[fg=white]| #[fg=yellow] #(whoami) #[fg=white]@ #[fg=magenta]  #(hostname -s) #[default]'
+
+# Status Left - Tmux Icon
+set -g status-left '#[fg=white]  #[default]'
+
+# Pane Border Styling
+set -g pane-border-style fg=default
+set -g pane-active-border-style fg=green
+
+# Message Command Style (When You Run Commands in Tmux)
+set -g message-style bg=default,fg=green
+
+# Clock Mode Styling (When Showing the Clock in a Pane)
+set -g clock-mode-colour green
+set -g clock-mode-style 24
+
