--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,8 +61,9 @@ set -g status-position bottom
 set -g status-interval 2
 
 # Window Status Format (Normal and Current)
-set -g window-status-format '#I: #(basename "#{pane_current_path}")'
-set -g window-status-format '#I: #{pane_current_command}'
+
+set -g window-status-format '#[bg=default,fg=blue]#[bg=blue,fg=black]#I #[bg=black,fg=white] #{pane_current_command}#[bg=default,fg=black]'
+set -g window-status-current-format '#[bg=default,fg=red]#[bg=red,fg=black]#I #[bg=black,fg=white] #{pane_current_command}#[bg=default,fg=black]'
 
 # Status Bar Styling (Transparent Background)
 set -g status-style bg=default,fg=white  
@@ -71,10 +72,10 @@ set -g window-status-current-style bg=default,fg=green
 
 # Status Right - Time, User, Hostname with Icons
 set -g status-right-length 120
-set -g status-right '#[fg=cyan] #(date +"%b %_d %H:%M") #[fg=white]| #[fg=yellow] #(whoami) #[fg=white]@ #[fg=magenta]  #(hostname -s) #[default]'
+set -g status-right '#[bg=default,fg=cyan]#[bg=cyan,fg=black] #[bg=black,fg=white] #(whoami)#[bg=default,fg=black] #[bg=default,fg=cyan]#[bg=cyan,fg=black] #[bg=black,fg=white] #(date +"%b %_d %H:%M") '
 
-# Status Left - Tmux Icon
-set -g status-left '#[fg=white]  #[default]'
+#kStatus Left - Tmux Icon
+set -g status-left '#[bg=black,fg=default]  #[bg=default,fg=black] '
 
 # Pane Border Styling
 set -g pane-border-style fg=default
