--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -75,7 +75,7 @@ set -g status-right-length 120
 set -g status-right '#[bg=default,fg=cyan]#[bg=cyan,fg=black] #[bg=black,fg=white] #(whoami)#[bg=default,fg=black] #[bg=default,fg=cyan]#[bg=cyan,fg=black] #[bg=black,fg=white] #(date +"%b %_d %H:%M") '
 
 #kStatus Left - Tmux Icon
-set -g status-left '#[bg=black,fg=default]  #[bg=default,fg=black] '
+set -g status-left ''
 
 # Pane Border Styling
 set -g pane-border-style fg=default
